# InitKit

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Config.kmk  DESIGN.md  LICENCE.md  Makefile.kmk  README.md  all
app/: Makefile.kmk
app/init/: Makefile.kmk
app/repositoryd/: CMakeLists.txt  Makefile.kmk  interface.c  internal.h  notify.c  object.c  repositoryd.c  storage.h
app/restartd/: CMakeLists.txt  Makefile.kmk  configd.c  confsub.c  dirwatch.c  dirwatch.h  interface.c  manager.h  restartd.c  timer.c  timer.h  unit.c  unit.h
app/svccfg/: CMakeLists.txt  Makefile.kmk  parse-unit.c  svccfg.c  svccfg.h
app/svcorder/: CMakeLists.txt  Makefile.kmk  confsub.c  svcorder.c  svcorder.h
app/systemdr/: Makefile.kmk  app.cxx  manager.cxx  manager.h  state.cxx  state.h  systemdr.cxx
app/systemdr/state/: maintenance.cxx  run.cxx  startpost.cxx  startpre.cxx
dat/: sd-simple.s16  simple.s16  sleep.sh
doc/: CPYRIGHT.md  DESIGN.md  GTECH.md  LOGO.md  s16.odg
hdr/: list.h  s16.h  s16db.h  s16rr.h
init/: Makefile.kmk  init.cxx
lib/: CMakeSub.txt  Makefile.kmk  sd-simple.s16  simple.s16  simple2.s16  sleep.sh
lib/s16/: CMakeLists.txt  Makefile.kmk  list.c  mem.c  misc.c  object.c
lib/s16db/: CMakeLists.txt  Makefile.kmk  configd.c  rpc.c  translate.c  translate.h
lib/s16rr/: CMakeLists.txt  Makefile.kmk  process.c
lib/s16rr/process-tracker/: pt-driver-kevent.c  pt-driver-netlink.c  pt-driver-posix.c
libs16/: Makefile.kmk  list.c  object.c
libs16db/: Makefile.kmk  object.c  rpc.c  translate.c  translate.h
libs16rr/: Makefile.kmk  process.c
libs16rr/process-tracker/: pt-driver-kevent.c
repositoryd/: Makefile.kmk  interface.c  internal.h  object.c  repositoryd.c  repositoryd.x  storage.h
rpc/: CMakeLists.txt  Makefile.kmk  config-subscriber.x  repositoryd.x  restartd.x  s16.x
svccfg/: Makefile.kmk  parse-unit.c  svccfg.c  svccfg.h  systemd-unit.c
systemdr/: Makefile.kmk  app.cxx  manager.cxx  manager.h  sd-defs.h  state.cxx  state.h  systemdr.cxx
systemdr/state/: maintenance.cxx  run.cxx
